--- a/templates/hiv.html
+++ b/templates/hiv.html
@@ -26,7 +26,7 @@
      <script src="https://d3js.org/d3.v4.min.js"></script>
 
     <!-- CSS  -->
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../static/CSS/style.css">
     
 </head>
 
@@ -39,16 +39,16 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ml-auto">
          <li class="nav-item active">
-            <a class="nav-link" href="../preventions.html">Preventions <span class="sr-only"></span></a>
+            <a class="nav-link" href="preventions.html">Preventions <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../treatments.html">Treatments</a>
+            <a class="nav-link" href="treatments.html">Treatments</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="../deaths.html">Deaths <span class="sr-only"></span></a>
+            <a class="nav-link" href="deaths.html">Deaths <span class="sr-only"></span></a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="../donate.html">Donate <span class="sr-only"></span></a>
+            <a class="nav-link" href="donate.html">Donate <span class="sr-only"></span></a>
         </li>
         </ul>
     </div>
