--- a/templates/treatments.html
+++ b/templates/treatments.html
@@ -24,7 +24,7 @@
      <script src="https://d3js.org/d3.v4.min.js"></script>
 
     <!-- CSS  -->
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../static/CSS/style.css">
 
      <!-- Plotly.js -->
      <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
@@ -33,7 +33,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light xyz">
-        <a href="templates/hiv.html" class="navbar-brand">HIV</a>
+        <a href="hiv.html" class="navbar-brand">HIV</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
