--- a/templates/treatments.html
+++ b/templates/treatments.html
@@ -40,7 +40,7 @@
     <div class="collapse navbar-collapse xyz" id="navbarText">
         <ul class="navbar-nav ml-auto">
          <li class="nav-item active">
-            <a class="nav-link" href="preventions.html">Preventions <span class="sr-only"></span></a>
+            <a class="nav-link" href="preventions.html">Preventions<span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="treatments.html">Treatments</a>
@@ -59,10 +59,12 @@
     <div id="map"></div>
     
     <!-- API key -->
-    <script type="text/javascript" src="static/config.js"></script>
+    <script type="text/javascript" src="../static/js/config.js"></script>
 
     <!-- JS  -->
-    <script type="text/javascript" src="static/app.js"></script>
+    <script type="text/javascript" src="../static/js/app.js"></script>
+    <script type="text/javascript" src="../static/js/LifeExpectancy.js"></script>
+    <script type="text/javascript" src="../static/js/ART.js"></script>
 
     <div>
             <div class="row descriptions">
@@ -132,7 +134,7 @@
                                                         <br>
                                                         Dizziness,
                                                         <br>
-                                                        Fatigue, and
+                                                        Fatigue and
                                                         <br>
                                                         Pain
                                                 </p>
@@ -185,17 +187,10 @@
                     <h3>ART Treatment</h3>
                 </div>
                 <div class="panel-body">
-                <div id="myArt"></div>
+                <div id="myART"></div>
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
 
                             <!--                             
                             <div class="row">
@@ -223,9 +218,7 @@
     </div>
 </div>
 
-<script type="text/javascript" src="static/LifeExpectancy.js"></script>
-<script type="text/javascript" src="static/ART.js"></script>
-       
+
 
 </body>
 </html>
