--- a/templates/treatments.html
+++ b/templates/treatments.html
@@ -162,6 +162,18 @@
                                             <br>
                                             <br>
                                             <h8>Information Dervied From: <a href="https://www.cdc.gov/hiv/basics/livingwithhiv/treatment.html">https://www.cdc.gov/hiv/basics/livingwithhiv/treatment.html</a></h8>
+                                            <br>
+                                            <br>
+                                            <br>
+                                            <img src="https://aidsinfo.nih.gov/images/glossaryimages/Viral-Suppression-600.jpg" alt="ART Image"
+                                            style="width:75%;height:150;">
+                                            <br>
+                                            <br>
+                                            <h2>Visualizations: </h2>
+                                            <hr>
+                                            <h5>The charts below show the average life expectancy of those with HIV increase throughout the years as ART treatment became popular throughout time.</h5>
+                                            <br>
+                                            <h6>Select a country from the drop down menu.</h6>
 
 <div class="container">
     <div class="row">
@@ -171,10 +183,12 @@
                         <div class="plot" id="plotdiv"></div>
                         <div class="control-row">
                             Country: <select class="countrydata"></select>
+                            <br>
+                            <br>
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3>Life Expectancy</h3>
+                    <h3>Life Expectancy: </h3>
                 </div>
                 <div class="panel-body">
                     <div id="myDiv"></div>
@@ -184,7 +198,7 @@
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3>ART Treatment</h3>
+                    <h3>ART Treatment: </h3>
                 </div>
                 <div class="panel-body">
                 <div id="myART"></div>
