--- a/templates/hiv.html
+++ b/templates/hiv.html
@@ -32,7 +32,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a href="templates/hiv.html" class="navbar-brand">HIV</a>
+        <a href="hiv.html" class="navbar-brand">HIV</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
