--- a/templates/donate.html
+++ b/templates/donate.html
@@ -24,29 +24,30 @@
      <script src="https://d3js.org/d3.v4.min.js"></script>
 
     <!-- CSS  -->
-    <link rel="stylesheet" href="../static/CSS/style.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='CSS/style.css')}}">
+
     
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a href="hiv.html" class="navbar-brand">HIV</a>
+        <a href="/" class="navbar-brand">HIV</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ml-auto">
          <li class="nav-item active">
-            <a class="nav-link" href="preventions.html">Preventions <span class="sr-only"></span></a>
+            <a class="nav-link" href="/prevention">Preventions <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="treatments.html">Treatments</a>
+            <a class="nav-link" href="/treatment">Treatments</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="deaths.html">Deaths <span class="sr-only"></span></a>
+            <a class="nav-link" href="/death">Deaths <span class="sr-only"></span></a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="donate.html">Donate <span class="sr-only"></span></a>
+            <a class="nav-link" href="/donate">Donate <span class="sr-only"></span></a>
         </li>
         </ul>
     </div>
