--- a/templates/hiv.html
+++ b/templates/hiv.html
@@ -53,10 +53,16 @@
         </ul>
     </div>
     </nav>
+    
+     <!-- map div -->
+     <div id="map"></div>
+    
+     <!-- API key -->
+     <script src="{{url_for('static', filename='js/config.js')}}"></script>
+ 
+     <!-- JS  -->
+     <script src="{{url_for('static', filename='js/app.js')}}"></script>
 
-
-    <img src="https://cdn.hiptoro.com/wp-content/uploads/2019/05/AIDS-2-800x400.jpg" alt="HIV Image"
-    style="width:100%;height:300px;">
 <br>
 <br>
 <!-- Home Page -->
