--- a/templates/treatments.html
+++ b/templates/treatments.html
@@ -55,14 +55,11 @@
     </div>
     </nav>
 
-     <!-- map div -->
-    <div id="map"></div>
+    <!-- Image to put on page -->
+    <img src="https://jnj-content-lab.brightspotcdn.com/dims4/default/247be6f/2147483647/strip/true/crop/1460x675+244+171/resize/1440x666!/quality/90/?url=https%3A%2F%2Fjnj-content-lab.brightspotcdn.com%2Ff8%2F56%2F4fbea63b4e529c48f4ed7ea9225b%2Fhiv-aids-lede-v2.png" alt="HIV Image"
+    style="width:100%;height:300px;">
     
-    <!-- API key -->
-    <script src="{{url_for('static', filename='js/config.js')}}"></script>
-
-    <!-- JS  -->
-    <script src="{{url_for('static', filename='js/app.js')}}"></script>
+    <!-- JS -->
     <script src="{{url_for('static', filename='js/LifeExpectancy.js')}}"></script>
     <script src="{{url_for('static', filename='js/ART.js')}}"></script>
  
@@ -185,46 +182,26 @@
                             Country: <select class="countrydata"></select>
                             <br>
                             <br>
-        <div class="col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3>Life Expectancy: </h3>
-                </div>
-                <div class="panel-body">
-                    <div id="myDiv"></div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3>ART Treatment: </h3>
-                </div>
-                <div class="panel-body">
-                <div id="myART"></div>
-                </div>
-            </div>
-        </div>
-
-                            <!--                             
-                            <div class="row">
-                                <div class="col-sm-12 col-md-12 col-lg-12">
-                                    <table>
-                                            <tr>
-                                                <td><div id="myDiv" style="width: 300px; height: 300px;"></div></td>
-                                                <td><div>"                                     "</div></td>
-                                                <td><div>"                                     "</div></td>
-                                                <td><div>"                                     "</div></td>
-                                                <td><div>"                                     "</div></td>
-                                                <td><div>"                                     "</div></td>
-                                                <td><div>"                                     "</div></td>
-                                                <td><div>"                                     "</div></td>
-                                                <td><div>"                                     "</div></td>
-                                                <td><div id="myART" style="width: 300px; height: 300px;"></div></td>
-                                            </tr>
-                                    </table>
-                                </div> 
-                            </div> -->
+                                <div class="col-md-6">
+                                     <div class="panel panel-default">
+                                        <div class="panel-heading">
+                                            <h3>Life Expectancy: </h3>
+                                        </div>
+                                            <div class="panel-body">
+                                                <div id="myDiv"></div>
+                                            </div>
+                                        </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading">
+                                            <h3>ART Treatment: </h3>
+                                        </div>
+                                            <div class="panel-body">
+                                                <div id="myART"></div>
+                                            </div>
+                                    </div>
+                                </div>
                         </div>
                     </div>
                 </div>
