working Videojs- on Windows

--- a/templates/preventions.html
+++ b/templates/preventions.html
@@ -12,6 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     
+    
+
     <!-- Leaflet JS & CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
     integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
@@ -20,44 +22,199 @@
     integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
     crossorigin=""></script>
 
-     <!-- d3 JavaScript -->
-     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <!-- d3 JavaScript -->
+    <script src="https://d3js.org/d3.v4.min.js"></script>
 
     <!-- CSS  -->
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='CSS/style.css')}}">
+
+    <!-- Video.js-->
+    <link rel="stylesheet" href="{{url_for('static', filename='CSS/video-js.css')}}">
     
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a href="hiv.html" class="navbar-brand">HIV</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav ml-auto">
-         <li class="nav-item active">
-            <a class="nav-link" href="preventions.html">Preventions <span class="sr-only"></span></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="treatments.html">Treatments</a>
-        </li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a href="/" class="navbar-brand">HIV</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+<div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-            <a class="nav-link" href="deaths.html">Deaths <span class="sr-only"></span></a>
-        </li>
-        <li class="nav-item active">
-            <a class="nav-link" href="donate.html">Donate <span class="sr-only"></span></a>
-        </li>
-        </ul>
-    </div>
-    </nav>
+        <a class="nav-link" href="/prevention">Preventions <span class="sr-only"></span></a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/treatment">Treatments</a>
+    </li>
+    <li class="nav-item active">
+        <a class="nav-link" href="/death">Deaths <span class="sr-only"></span></a>
+    </li>
+    <li class="nav-item active">
+        <a class="nav-link" href="/donate">Donate <span class="sr-only"></span></a>
+    </li>
+    </ul>
+</div>
+</nav>
 
+
+
+<div class="container-fluid">
+<div class="sidebar">
 <!-- Widget to find HIV testing Sites in the US -->
-
 <h7><strong>Find a HIV Clinic in <br/> the United States</strong></h7>
-<noscript><div style="height:350px;position:relative;width:132px;background:url(https://locator.hiv.gov/images/bg_widget_narrow-8bit.png) no-repeat;padding-left:13px;"><strong style="padding-top:6px;color:#fff;display:block;font-family:Trebuchet MS;font-size:12px;line-height:1.18;margin-bottom:5px;">Find HIV/AIDS<br/>Prevention & Service<br/>Providers</strong><form action="https://locator.hiv.gov/index.php" style="margin:0;"><label style="margin-left:18px;"><input type="text" name="location" style="border:0;font-size:11px;width:65px;"/></label><button type="submit" style="background:none;border:none;cursor:pointer;height:34px;margin:5px 0 0 5px;padding:0;text-indent:-999em;overflow:hidden;vertical-align:middle;width:34px;">GO</button><input type="hidden" name="text_only" value="true" /></form><div style="background:url(https://locator.hiv.gov/images/bg_tab_narrow-8bit.png) no-repeat scroll 0 0;height:200px;left:4px;overflow:hidden;padding:10px 12px;position:absolute;top:100px;width:113px;z-index:1;font-family:arial,sans-serif;font-size:11px;line-height:15px;"><p>Enter your location, such as: "Washington, DC", or "20002".</p><p>For more information on this widget, please visit <a href="https://locator.hiv.gov/">hiv.gov</a>.</p><p>Please contact <a href="mailto:contact@AIDS.gov">contact@AIDS.gov</a> with any comments or concerns.</p></div></div></noscript><script type="text/javascript" src="https://locator.hiv.gov/narrowwidget.js"></script>
+<noscript>
+    <div style="height:350px;position:relative;width:132px;background:url(https://locator.hiv.gov/images/bg_widget_narrow-8bit.png) no-repeat;padding-left:13px;">
+        <strong style="padding-top:6px;color:#fff;display:block;font-family:Trebuchet MS;font-size:12px;line-height:1.18;margin-bottom:5px;">
+            Find HIV/AIDS<br/>Prevention & Service<br/>Providers
+        </strong>
+        <form action="https://locator.hiv.gov/index.php" style="margin:0;">
+            <label style="margin-left:18px;">
+                <input type="text" name="location" style="border:0;font-size:11px;width:65px;"/>
+            </label>
+            <button type="submit" style="background:none;border:none;cursor:pointer;height:34px;margin:5px 0 0 5px;padding:0;text-indent:-999em;overflow:hidden;vertical-align:middle;width:34px;">
+                GO
+            </button>
+            <input type="hidden" name="text_only" value="true" />
+        </form>
+        <div style="background:url(https://locator.hiv.gov/images/bg_tab_narrow-8bit.png) no-repeat scroll 0 0;height:200px;left:4px;overflow:hidden;padding:10px 12px;position:absolute;top:100px;width:113px;z-index:1;font-family:arial,sans-serif;font-size:11px;line-height:15px;">
+            <p>Enter your location, such as: "Washington, DC", or "20002".</p>
+            <p>For more information on this widget, please visit <a href="https://locator.hiv.gov/">hiv.gov</a>.</p>
+            <p>Please contact <a href="mailto:contact@AIDS.gov">contact@AIDS.gov</a> with any comments or concerns.</p>
+        </div>
+    </div>
+</noscript>
+<script type="text/javascript" src="https://locator.hiv.gov/narrowwidget.js"></script>
+</div>
+
+<div class="row descriptions" style="margin-left: 150px;">
+        <div class="col-sm-12 col-md-12">
+            <div class="panel panel-default">
+            <div class="panel-body">
+                <h2>HIV Prevention</h2>
+                <hr>
+                <br>
+                <h5>How do I avoid getting HIV during sex?</h5>
+                    <p>HIV is spread through contact with blood or sexual fluids (like semen and vaginal fluids), usually during vaginal and anal sex. 
+                        So the only 100% certain way to avoid HIV is to not have vaginal or anal sex.</p>
+                    <p>But most people do have sex at some point in their lives, so learning about HIV prevention and knowing how to have safer sex is important. 
+                        Using condoms REALLY lowers your risk of getting HIV. If you’re going to have sex, using condoms every single time is the best way to protect 
+                        yourself from HIV. There’s also a daily pill you can take — called PrEP — that can help prevent HIV. 
+                        Your doctor or nurse can tell you if PrEP is right for you.</p>
+                    <p>Some sexual activities are safer than others when it comes to getting HIV. 
+                        These activities are “no risk” — they’ve never caused a reported case of HIV:</p>
+
+                    <ul style="list-style-type:circle;">
+                        <li>Touching your partner’s genitals</li>
+                        <li>Rubbing your bodies together (dry humping)</li>
+                        <li>Having oral sex with a condom or dental dam</li>
+                        <li>Using clean sex toys</li>
+                        <li>Masturbating</li>
+                        <li>Kissing</li>
+                    </ul> 
+                <br>
+                    <p>These activities are “lower risk” — they’ve only caused a few reported cases of HIV (out of millions):</p>
+                    <ul style="list-style-type:circle;">
+                        <li>"French” or deep kissing (if the person with HIV has sores or bleeding in their mouth)</li>
+                        <li>Vaginal sex with a condom</li>
+                        <li>Oral sex without a condom</li>
+                        <li>Anal sex with a condom</li>
+                    </ul> 
+                <br>
+                    <p>These activities are “high risk” — millions of people get HIV this way:</p>
+                    <ul style="list-style-type:circle;">
+                            <li>Vaginal sex without a condom</li>
+                            <li>Anal sex without a condom</li>
+                        </ul>
+                    <br>
+                    <p>It’s easier for HIV to get into your body if you have sores, cuts, or openings in your skin that semen (cum), vaginal fluids, 
+                        or blood may get into. So don’t have sex if you have a herpes outbreak or other infections. Having other STDs makes you more 
+                        likely to get HIV, so it’s a good idea to get tested for STDs regularly.</p>
+                    <p>There’s no vaccine that protects against HIV, but lots of people are working on making one. And there are medicines (called PEP 
+                        and PrEP) that can help prevent HIV. Read more about <a href="https://www.plannedparenthood.org/learn/stds-hiv-safer-sex/hiv-aids/prep">PrEP</a> and
+                    <a href="https://www.plannedparenthood.org/learn/stds-hiv-safer-sex/hiv-aids/pep"> PEP</a>.</p>
+                    <br>
+
+                    <video class="video-js vjs-default-skin vjs-big-play-centered" width="640px" height="360px"
+                    poster="https://cdn.hiptoro.com/wp-content/uploads/2019/05/AIDS-2-800x400.jpg"
+                    controls
+                    data-setup='{ "techOrder": ["youtube"], "sources": [{ "type": "video/youtube", "src": "https://www.youtube.com/watch?v=TR8-3uAuZGo"}], "youtube": { "customVars": { "wmode": "transparent" } } }'
+                    >
+
+                    <source src="https://www.youtube.com/watch?v=TR8-3uAuZGo" type="video/mp4"/>
+                    <p> class="vjs-no-js">
+                        To view this video please enable JavaScript and consider upgrading
+                        to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank"> supports HTML5 video</a>
+                    </p>
+                    </video>
+                    <br>
+                    <br>
+                    <p>If you don’t have HIV and your partner does, they can get on an HIV treatment called antiretroviral therapy (ART). ART can lower 
+                        their chance of spreading HIV during sex. And some people who are on ART can’t transmit HIV to their partner at all.</p>
+                    <br>
+                    <video class="video-js vjs-default-skin vjs-big-play-centered" width="640px" height="360px"
+                    poster="https://cdn.hiptoro.com/wp-content/uploads/2019/05/AIDS-2-800x400.jpg"
+                    controls
+                    data-setup='{ "techOrder": ["youtube"], "sources": [{ "type": "video/youtube", "src": "https://www.youtube.com/watch?v=shGy6VGkGhE"}], "youtube": { "customVars": { "wmode": "transparent" } } }'
+                    >
+
+                    <source src="https://www.youtube.com/watch?v=shGy6VGkGhE" type="video/mp4"/>
+                    <p> class="vjs-no-js">
+                        To view this video please enable JavaScript and consider upgrading
+                        to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank"> supports HTML5 video</a>
+                    </p>
+                    </video>
+
+                
+
+                <br>
+                <h5>How can I make sure I don’t give HIV to anyone during sex?</h5>
+                <hr>
+                <br>
+                    <p>If you find out that you have HIV, try to stay calm. People living with HIV can have normal, healthy relationships and sex lives. 
+                        But it’s important to take precautions to help your partner(s) stay HIV-free.There are a few ways that you can avoid giving HIV 
+                        to other people:</p>
+                        <ul style="list-style-type:circle;">
+                                <li>Start treatment for HIV as soon as possible, and keep taking your HIV medicine. When you take it correctly, HIV treatment
+                                     can lower or even stop your chances of spreading the virus to your sexual partners (and help you stay healthy).</li>
+                                <li>Get tested and treated for other STDs besides HIV regularly. Having other STDs makes it easier for you to spread HIV to others.</li>
+                                <li>There’s a daily pill your partner can take to lower the risk of getting HIV, called PrEP.</li>
+                                <li>Don’t share needles for shooting drugs, piercings, or tattoos.</li>
+                                <li>Always use condoms when you have vaginal and anal sex.</li>
+                            </ul>
+                   
+                    <p>If you test positive for HIV, it’s important to tell your sexual partners about it so they can be tested, too. Even if you’re really careful to not spread HIV, 
+                        be honest with your future partners about your status so you can both be informed and help each other stay health</p>                                  
+            </div>
+            </div>
+        
+        
+        <br>
+        <br>
+        <h8>For additional information visit: <a href="https://www.cdc.gov/hiv/">Center for Disease Control</a></h8>
+        <h8>and <a href="https://aidsinfo.nih.gov/">National Institute for Health</a></h8>
+        <br>
+
+        <h8>Information Derived From: <a href="https://www.plannedparenthood.org/learn/stds-hiv-safer-sex/hiv-aids/how-can-i-prevent-hiv">
+            https://www.plannedparenthood.org/learn/stds-hiv-safer-sex/hiv-aids/how-can-i-prevent-hiv</a></h8>
+
+        </div>
 
 
+
+</div>
+
+    
+
+</div>
+    
+
+<script src='https://vjs.zencdn.net/7.5.4/video.js'></script>
+<script src="{{url_for('static', filename='js/youtube.min.js')}}"></script>
+
+    
+
+</body>
 
 
 
