--- a/templates/preventions.html
+++ b/templates/preventions.html
@@ -57,12 +57,13 @@
 </div>
 </nav>
 
-
+<img src="https://i.pinimg.com/originals/ef/cc/f2/efccf20ccc828552930fda33c8801ee8.png" alt="HIV Preventions Image"
+style="width:100%;height:300px;">
 
 <div class="container-fluid">
 <div class="sidebar">
 <!-- Widget to find HIV testing Sites in the US -->
-<h7><strong>Find a HIV Clinic in <br/> the United States</strong></h7>
+<h7 class="hivclinic"><strong>Find a HIV Clinic in <br/> the United States</strong></h7>
 <noscript>
     <div style="height:350px;position:relative;width:132px;background:url(https://locator.hiv.gov/images/bg_widget_narrow-8bit.png) no-repeat;padding-left:13px;">
         <strong style="padding-top:6px;color:#fff;display:block;font-family:Trebuchet MS;font-size:12px;line-height:1.18;margin-bottom:5px;">
